--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ p{
 .bg-ylo{
   background-color: #ffc61a;
 }
+.text-dpblack{
+  color:#000000;
+}
+.bg-dpblack{
+  background-color:#000000;
+}
 
 /* header css */
 header{
@@ -73,7 +79,13 @@ header{
   background: #ffc61a;
   border-radius:17px;
 }
-
+.navbar-dark .navbar-toggler {
+  color: rgba(255, 255, 255, 0.5);
+  border-color:transparent;
+}
+.navbar-dark .navbar-toggler-icon{
+  background-image: url(img/menu.png);
+}
 .heading_info{
   padding-top:90px;
 }
@@ -147,6 +159,7 @@ header{
    background:#ffffff;
    width:380px;
    padding-bottom: 1px;
+   float:right;
   
  } 
  .booking_form h2{
@@ -165,7 +178,13 @@ header{
  font-family: 'Lato', sans-serif;
   margin-bottom: 15px;
   margin-top: 5px;
+  font-weight: 600;
+
 }
+#aboutus form select{
+  color:black;
+}
+
 #aboutus form input:focus{
   box-shadow: none;
   border-color: #ffc61a;
@@ -195,7 +214,291 @@ header{
   color:black;
 }
 
+ /* tarrif start */
+#tarrif{
+  padding-top:60px;
+  padding-bottom:100px;
+}
+#tarrif .tarrif_title{
+  margin-bottom: 122px;
+}
+#tarrif .tarrif_title h3{
+  margin-bottom:-5px;
+}
+
+#tarrif .card{
+ 
+  background-color:#f5f4f2;
+  border:none;
+  border-radius: 0;
+  max-width:460px;
+  margin:0 auto;
+}
+#tarrif .card img{
+  margin-top:-20%;
+}
+#tarrif .card h4 ,#tarrif .card p {
+  color:#000000;
+  
+}
+#tarrif .card p{
+  margin-top:20px;
+}
+
+#tarrif .card a {
+    
+  background-color: #ffc61a;
+  color:#000000;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue', cursive;
+
+  font-size: 23px;
+  padding: 5px 20px;
+  letter-spacing: 1px;
+  margin-top: 20px;
+  
+}
+#tarrif .card a:hover{
+  background-color: #1b1b1b;
+  color:#ffffff;
+}
+#tarrif .card.active{
+  
+  background: url(img/star.png) no-repeat;
+  background-position: bottom right;
+  background-color: #ffc61a;
+}
+#tarrif .card:hover{
+  background: url(img/star.png) no-repeat;
+  background-position: bottom right;
+  background-color: #ffc61a;
+}
+#tarrif .card:hover a{
+  background-color: #1b1b1b;
+  color:#fff;
+}
+#tarrif .card.active h2{
+  color: #121212;
+}
+#tarrif .card.active a{
+  background-color: #1b1b1b;
+  color:#fff;
+}
+/* tarrif end  */
+
+#content{
+  background: url("img/servicebg.png") no-repeat;
+  padding-bottom:100px;
+  background-size: cover;
+  
+}
+#content .content-info{
+  padding-top: 80px;
+}
+.main_content_article{
+  margin-top:80px;
+  position:relative;
+  padding-left:105px;
+
+}
+.main_content_article img{
+  position:absolute;
+  top:0;
+  left:0;
+}
+.main_content_article p{
+  margin-right:80px;
+  
+  
+}
+#content a{
+  
+  background-color: #ffc61a;
+  color:#000000;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue', cursive;
+
+  font-size: 24px;
+  padding: 5px 20px;
+  letter-spacing: 1px;
+  margin-top: 60px;
+
+}
+#content a:hover{
+  background-color: #1b1b1b;
+  color:#fff;
+  border:2px solid #ffc61a
+}
+
+ /* content end */
 
 
+#app .app_info{
+  padding-bottom: 32px;
+  padding-top: 50px;
 
 
+}
+#app .app_info h2{
+  margin-bottom: 0;;
+
+}
+
+.app_content{
+  margin-top: 60px;
+}
+.app_content h4{
+  text-transform: none;
+  margin-bottom: 30px;
+  
+}
+.app_content p{
+  margin-right:125px;
+  margin-bottom:50px;
+  color:#101010;
+}
+.app_content img{
+  margin-right: 20px;
+  margin-bottom:20px;
+}
+.app_img{
+  margin-left:40px;
+}
+
+/* app end */
+
+
+#testimoni{
+  background: url(img/testimonibg.png);
+  
+  background-attachment: fixed;
+  padding-bottom:78px;
+  
+}
+
+#testimoni .testimoni_info{
+  padding:80px 0;
+}
+#testimoni .comments{
+  background: url(img/commentsbg.png) no-repeat;
+  background-size:100% 100%;
+  
+  padding:30px 90px 30px 50px;
+  margin-bottom:30px;
+  margin-top:10px;
+  
+}
+
+#testimoni .comments p{
+  font-size: 15px;
+ 
+}
+#testimoni .comments .man_info{
+  position:relative;
+  padding-left: 90px;
+}
+#testimoni .comments .man_info img{
+  position:absolute;
+  top:-5px;
+  left:0;
+
+}
+#testimoni .comments .man_info h5{
+  margin-bottom:30px;
+}
+
+#contact{
+  padding-top:60px ;
+  padding-bottom:80px;
+}
+#contact h1{
+  font-size: 5rem;
+}
+ /* contact end */
+ #foot_up{
+   padding-top:50px;
+   background:url(img/footbg.png);
+   
+
+ }
+ #foot_up h4{
+   color:#ffffff;
+   padding-bottom: 30px;
+   border-bottom: 5px solid #ffc61a;
+ }
+ #foot_up p{
+   color:#ffffff;
+   margin-top: 30px;
+   font-size:14px;
+   margin-right:25px;
+ }
+
+#foot_up ul{
+  list-style-type: none;
+  overflow: hidden;
+  padding: 0;
+}
+#foot_up .fabout{
+  margin-right: 60px;
+}
+#foot_up .fabout ul li{
+  float:left;
+  margin-right:10px;
+}
+#foot_up .fabout ul li a{
+  color:#ffc61a;
+}
+
+#foot_up .fdownload{
+  margin:0  40px;
+}
+
+#foot_up .fdownload p{
+  margin-right:10px;
+}
+#foot_up .fdownload .ylo{
+  
+  margin-top:15px;
+  color:#ffc61a;
+  font-size:16px;
+  
+}
+#foot_up .fdownload .ylo i{
+  color:#ffffff;
+  margin-left:20px;
+  font-size:20px;
+  
+
+  
+
+}
+#foot_up .fcontact{
+  margin-left:60px;
+}
+#foot_up .fcontact table{
+  margin-top:25px;
+  color:#fff;
+  font-size:14px;
+}
+
+#foot_up .fcontact td i{
+  margin-right:25px;
+  vertical-align: supers;
+  color:#fff;
+  font-size:16px;
+  
+}
+#foot_up .fcontact td p{
+  margin-top:5px;
+}
+
+
+ /* foot up end */
+
+ #foot_down p{
+   margin:0;
+   font-size: 14px;
+   padding:10px;
+ }
